# sea-orm-pro

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: .gitignore
build_tools/: build_frontend.sh  download_frontend.sh  rustfmt.sh
config/: development.yaml  test.yaml
examples/axum_example/api/: Cargo.toml
examples/axum_example/api/src/: lib.rs
examples/axum_example/api/src/graphql/: query_root.rs
examples/axum_example/entity/: Cargo.toml
examples/axum_example/migration/: Cargo.toml
examples/axum_example/service/: Cargo.toml
examples/loco_example/: Cargo.toml
examples/loco_example/config/: development.yaml
examples/loco_example/migration/: Cargo.toml
examples/loco_example/src/: app.rs
examples/loco_example/src/controllers/: admin.rs  graphql.rs
examples/loco_example/src/graphql/: query_root.rs
examples/loco_example/src/tasks/: seed.rs
migration/: Cargo.toml
migration/AdventureWorks-2012-LT-Script/: Address.tsv  Customer.tsv  CustomerAddress.tsv  Product.tsv  ProductCategory.tsv  ProductDescription.tsv  ProductModel.tsv  ProductModelProductDescription.tsv  SalesOrderDetail.tsv  SalesOrderHeader.tsv
migration/src/: lib.rs  m20241101_000001_address.rs  m20241101_000002_customer.rs  m20241101_000003_customer_address.rs  m20241101_000004_product_category.rs  m20241101_000005_product_description.rs  m20241101_000006_product_model.rs  m20241101_000007_product.rs  m20241101_000008_product_model_product_description.rs  m20241101_000009_sales_order_header.rs  m20241101_000010_sales_order_detail.rs  m20250101_000001_user.rs  m20250101_000002_seed_user.rs
pro_admin/: config.toml  dashboard.toml
pro_admin/composite_tables/: customer_address.toml  product_category.toml  product_model.toml  sales_order.toml
pro_admin/raw_tables/: address.toml  customer.toml  product.toml  product_category.toml  product_description.toml  product_model.toml  sales_order_header.toml
pro_admin_frontend/: README.md
sea-orm-pro/: Cargo.toml  README.md
sea-orm-pro/src/: config.rs  parser.rs
src/: app.rs  lib.rs
src/controllers/: admin.rs  auth.rs  graphql.rs  mod.rs  upload.rs  user.rs
src/graphql/: query_root.rs
src/initializers/: casbin_enforcer.rs  mod.rs
src/models/: address.rs  baker.rs  bakery.rs  cake.rs  cake_baker.rs  casbin_rule.rs  customer.rs  customer_address.rs  mod.rs  prelude.rs  product.rs  product_category.rs  product_description.rs  product_model.rs  product_model_product_description.rs  sales_order_detail.rs  sales_order_header.rs  user.rs  utils.rs
src/tasks/: seed.rs
